src/components/Card/Card.module.css
.card {
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 12px;
  overflow: hidden;
}

.card:hover {
  cursor: pointer;
}

.thumbnail {
  width: 100%;
  height: 160px;
  object-fit: cover;
}

.info {
  display: flex;
  flex-direction: column;
  gap: 4px;
  padding: 12px;
}

.heading {
  font-family: "Poppins", serif;
  font-weight: 500;
  font-size: 1rem;
  color: #20292d;
}

.region {
  font-family: "Poppins", serif;
  font-size: 0.75rem;
  color: #777;
}

.extraContent {
  margin-top: 16px;
}

